--- a/armnews/templates/jinja2/news/header.html
+++ b/armnews/templates/jinja2/news/header.html
@@ -14,10 +14,10 @@
 	<nav class="navbar navbar-default info">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">События армрестлинга</a>
+	      <a class="navbar-brand" href="#">Новости армрестлинга</a>
 	    </div>
 	    <ul class="nav navbar-nav">
-	      <li class="active"><a href="#">События</a></li>
+	      <li class="active"><a href="/news/">Новости</a></li>
 	      <li><a href="/admin/" target="_parent">Секции</a></li>
 	      <li><a href="/admin/" target="_parent">Оборудование</a></li>
 			<!--       <li><a href="#">Page 2</a></li>
